<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.mirka.app.ghmarket.activities.walkthrough.fragments.StyleFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/fragment_style_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_sport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:background="@color/white.main"
                android:text="@string/text_sport"
                android:textColor="@color/black.main" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />


            <Button
                android:id="@+id/btn_classical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:background="@color/white.main"
                android:text="@string/text_classical"
                android:textColor="@color/black.main" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />


            <Button
                android:id="@+id/btn_casual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:background="@color/white.main"
                android:text="@string/text_casual"
                android:textColor="@color/black.main" />


        </LinearLayout>


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Select your style"
            app:titleTextColor="@color/white.main" />

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_android_close"
            android:tint="@color/white.main" />

    </FrameLayout>
</layout>
