<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="order"
            type="com.mirka.app.ghmarket.DB.Order" />

        <import type="android.view.View" />

        <import type="java.lang.String" />

    </data>


    <LinearLayout
        android:background="#dedede"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.mirka.app.ghmarket.activities.checkout.fragments.PaymentInfoFragment">


        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white.main"
            app:navigationIcon="@drawable/ic_android_arrow_back"
            app:title="@string/payment_info" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white.main"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Card number" />


            <EditText
                android:id="@+id/et_card_number"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selected_variation_bg"
                android:inputType="numberPassword" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Expiry" />

                    <EditText
                        android:id="@+id/et_expiry"
                        android:padding="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selected_variation_bg"
                        android:inputType="number" />
                </LinearLayout>

                <android.support.v4.widget.Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="CVC" />

                    <EditText
                        android:id="@+id/et_cvc"
                        android:padding="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selected_variation_bg"
                        android:inputType="number" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/promotion_code"
            android:textColor="@color/black.main" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/promo_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/white.main"
                android:hint="Enter code"
                android:text="@{order.promoCode}"
                android:padding="4dp"
                android:textSize="14sp" />

            <Button
                android:enabled="false"
                android:id="@+id/btn_apply_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="0"
                android:background="@color/black.main"
                android:text="APPLY"
                android:textColor="@color/white.main" />
        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white.main">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white.main">

                <TableRow android:layout_margin="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/original_price" />

                    <TextView
                        android:id="@+id/tv_original_price"
                        android:text="@{String.valueOf(order.totalPrice)}" />

                </TableRow>

                <TableRow android:layout_margin="8dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/discount" />

                    <TextView
                        android:id="@+id/tv_discount"
                        android:text="@{String.valueOf(order.discountedPrice)}" />

                </TableRow>

                <TableRow android:layout_margin="8dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/shipping_ups" />

                    <TextView
                        android:id="@+id/tv_shipping"
                        android:text="@{String.valueOf(order.shipping)}" />

                </TableRow>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/black.sub" />


                <TableRow android:layout_margin="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total_price"
                        android:textColor="@color/black.main"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_total"
                        android:text="@{order.discountedPrice > 0?String.valueOf(order.discountedPrice)  :String.valueOf(order.totalPrice) }" />

                </TableRow>
            </TableLayout>
        </FrameLayout>


        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <Button
            android:textAllCaps="false"
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black.main"
            android:textColor="@color/white.main"
            android:visibility="@{order==null? View.GONE: View.VISIBLE}"
            tools:text="GHC 10" />


    </LinearLayout>

</layout>
